<resources>
    <string name="app_name">ToDo-Today</string>
    <string name="top_banner_title">To-do Today</string>
    <string name="top_banner_date_default">Jan 1, 1970</string>
    <string name="list_item_text_default">List item</string>
    <string name="new_item_FAB_description">Add new item to todoListRecyclerView</string>
    <string name="new_item_top_banner_text">Add a New To-do</string>
    <string name="new_item_itemhint">To-do Item</string>
    <string name="new_item_button">Add</string>
    <string name="remove_completed">Remove Completed</string>
    <string name="remove_completed_FAB_description">Remove all checked items as completed</string>
</resources>