<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/topBannerRelLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/teal_700"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topBannerTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/top_banner_title"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/topBannerDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topBannerTitleTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/top_banner_date_default"
            android:textSize="25sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBannerRelLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newItemFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/new_item_FAB_description"
        android:onClick="addNewItem"
        android:src="@drawable/add_new_item_30dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RelativeLayout
        android:id="@+id/removeCompletedRelLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        android:onClick="removeItems"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/removeCompletedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/remove_completed"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>