<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewItemActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newItemTopBannerToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:id="@+id/newItemTopBannerRelLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/teal_700"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/newItemTopBannerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/new_item_top_banner_text"
            android:textSize="40sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/newItemFormRelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newItemTopBannerToolbar">

        <EditText
            android:id="@+id/newItemFormItemEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/new_item_itemhint"
            android:inputType="textMultiLine"
            android:lines="2" />

        <Button
            android:id="@+id/newItemFormButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_item_button"
            android:layout_below="@+id/newItemFormItemEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>